--- a/articulo.html
+++ b/articulo.html
@@ -154,6 +154,15 @@
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quae esse quisquam ea dolorem architecto, suscipit harum magnam aliquid possimus eum voluptatibus iure neque impedit facilis voluptas natus?</p>
+                    <!-- <p style="font-weight: 100;">Texto 100</p>
+                    <p style="font-weight: 200;">Texto 200</p>
+                    <p style="font-weight: 300;">Texto 300</p>
+                    <p style="font-weight: 400;">Texto 400</p>
+                    <p style="font-weight: 500;">Texto 500</p>
+                    <p style="font-weight: 600;">Texto 600</p>
+                    <p style="font-weight: 700;">Texto 700</p>
+                    <p style="font-weight: 800;">Texto 800</p>
+                    <p style="font-weight: 900;">Texto 900</p> -->
                     <p class="mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum hic tenetur similique cum et animi consequuntur, libero doloribus voluptas voluptatibus ducimus eos nemo iusto velit esse! Magnam earum similique distinctio repellendus. Illo at, voluptatum provident necessitatibus maxime possimus illum earum id!</p>
 
                     <h2 class="mb-3">Titulo interesante</h2>
