--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         <!-- Text Container -->
                         <div class="text-container">
                             <h2>La elección correcta</h2>
-                            <p>Nos encargamos de tu propiedad; nos comprometemos a estar contigo en todo el proceso de venta.</p>
+                            <p style="text-align: justify;">Nos encargamos de tu propiedad; nos comprometemos a estar contigo en todo el proceso de venta.</p>
                         </div> <!-- end of text-container -->
                         <!-- end of text container -->
 
@@ -241,9 +241,9 @@
     <!-- end of details -->
 
     <!-- Services -->
-    <section>
+    <section id="services">
         <!-- Services 1 -->
-        <div id="services" class="basic-1">
+        <div class="basic-1">
             <div class="container">
             <div class="row">
                 <div class="col-lg-7">
@@ -254,79 +254,79 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <h2>Edición de fotos</h2>
-                        <p style="text-align: justify;">Nuestro equipo se encargará de darle la mejor imagen a tu propiedad.</p>
+                        <p>Nuestro equipo se encargará de darle la mejor imagen a tu propiedad.</p>
                         <!-- <a class="read-more no-line green" href="articulo.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a> -->
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </div> <!-- end of basic-1 -->
-    <!-- end of services 1 -->
+        </div> <!-- end of basic-1 -->
+        <!-- end of services 1 -->
 
 
-    <!-- Services 2 -->
-    <div class="basic-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7">
-                    <div class="image-container">
-                        <img class="img-fluid" src="images/services-2.jpg" alt="Edicion de material audiovisual">
-                    </div> <!-- end of image-container -->
-                </div> <!-- end of col -->
-                <div class="col-lg-5">
-                    <div class="text-container">
-                        <h2>Edición de material audiovisual</h2>
-                        <p style="text-align: justify;">Creamos contenido, como: imágenes, banners digitales y videos para mostrarlos en redes sociales y campañas digitales.</p>
-                        <!-- <a class="read-more no-line green" href="articulo.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a> -->
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of basic-2 -->
-    <!-- end of services 2 -->
+        <!-- Services 2 -->
+        <div class="basic-2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <div class="image-container">
+                            <img class="img-fluid" src="images/services-2.jpg" alt="Edicion de material audiovisual">
+                        </div> <!-- end of image-container -->
+                    </div> <!-- end of col -->
+                    <div class="col-lg-5">
+                        <div class="text-container">
+                            <h2>Edición de material audiovisual</h2>
+                            <p>Creamos contenido, como: imágenes, banners digitales y videos para mostrarlos en redes sociales y campañas digitales.</p>
+                            <!-- <a class="read-more no-line green" href="articulo.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a> -->
+                        </div> <!-- end of text-container -->
+                    </div> <!-- end of col -->
+                </div> <!-- end of row -->
+            </div> <!-- end of container -->
+        </div> <!-- end of basic-2 -->
+        <!-- end of services 2 -->
     
 
-    <!-- Services 2 -->
-    <div class="basic-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7">
-                    <div class="image-container">
-                        <img class="img-fluid" src="images/services-campanias.jpg" alt="Campañas publicitarias">
-                    </div> <!-- end of image-container -->
-                </div> <!-- end of col -->
-                <div class="col-lg-5">
-                    <div class="text-container">
-                        <h2>Campañas publicitarias</h2>
-                        <p style="text-align: justify;">Anunciaremos tu propiedad con publicidad pagada en redes sociales y Google Ads.</p>
-                        <!-- <a class="read-more no-line green" href="articulo.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a> -->
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of basic-2 -->
-    <!-- end of services 2 -->   
+        <!-- Services 2 -->
+        <div class="basic-2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <div class="image-container">
+                            <img class="img-fluid" src="images/services-campanias.jpg" alt="Campañas publicitarias">
+                        </div> <!-- end of image-container -->
+                    </div> <!-- end of col -->
+                    <div class="col-lg-5">
+                        <div class="text-container">
+                            <h2>Campañas publicitarias</h2>
+                            <p>Anunciaremos tu propiedad con publicidad pagada en redes sociales y Google Ads.</p>
+                            <!-- <a class="read-more no-line green" href="articulo.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a> -->
+                        </div> <!-- end of text-container -->
+                    </div> <!-- end of col -->
+                </div> <!-- end of row -->
+            </div> <!-- end of container -->
+        </div> <!-- end of basic-2 -->
+        <!-- end of services 2 -->   
     
-    <!-- Services 3 -->
-    <div class="basic-3">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7">
-                    <div class="image-container">
-                        <img class="img-fluid" src="images/services-asesoria.jpg" alt="Asesoría legal">
-                    </div> <!-- end of image-container -->
-                </div> <!-- end of col -->
-                <div class="col-lg-5">
-                    <div class="text-container">
-                        <h2>Asesoría legal</h2>
-                        <p style="text-align: justify;">Nos encargamos de brindar asesoría jurídica para solucionar todos aquellos temas relacionados con las ventas de propiedades en materia de derecho.</p>
-                        <!-- <a class="read-more no-line green" href="articulo.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a> -->
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </section> <!-- end of basic-3 -->
-    <!-- end of services 3 -->
+        <!-- Services 3 -->
+        <div class="basic-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <div class="image-container">
+                            <img class="img-fluid" src="images/services-asesoria.jpg" alt="Asesoría legal">
+                        </div> <!-- end of image-container -->
+                    </div> <!-- end of col -->
+                    <div class="col-lg-5">
+                        <div class="text-container">
+                            <h2>Asesoría legal</h2>
+                            <p>Nos encargamos de brindar asesoría jurídica para solucionar todos aquellos temas relacionados con las ventas de propiedades en materia de derecho.</p>
+                            <!-- <a class="read-more no-line green" href="articulo.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a> -->
+                        </div> <!-- end of text-container -->
+                    </div> <!-- end of col -->
+                </div> <!-- end of row -->
+            </div> <!-- end of container -->
+        </section> <!-- end of basic-3 -->
+        <!-- end of services 3 -->
     </section>
 
 
