--- a/contacto.html
+++ b/contacto.html
@@ -56,7 +56,7 @@
             <!-- Dark logo -->
             <!-- <a id="dark-logo" class="navbar-brand logo-image show" href="index.html"><img src="images/BH_logo_blanco.svg" alt="Logo Business House"></a>  -->
             <!-- Light logo -->
-            <a id="light-logo" class="navbar-brand logo-image show" href="index.html"><img src="images/BH_logo_normal.svg" alt="Logo Business House"></a> 
+            <a id="light-logo" class="navbar-brand logo-image show" href="index"><img src="images/BH_logo_normal.svg" alt="Logo Business House"></a> 
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <!-- <a class="navbar-brand logo-text" href="index.html">Desi</a> -->
@@ -68,13 +68,13 @@
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ms-auto navbar-nav-scroll">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html#header">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="index#header">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#services">Servicios</a>
+                        <a class="nav-link" href="index#services">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="propiedades.html">Propiedades</a>
+                        <a class="nav-link" href="propiedades">Propiedades</a>
                     </li>
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Nosotros</a>
@@ -89,10 +89,10 @@
                         </ul>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">¿Quiénes somos?</a>
+                        <a class="nav-link" href="nosotros">¿Quiénes somos?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="contacto.html">Contacto</a>
+                        <a class="nav-link active" href="contacto">Contacto</a>
                     </li>
                 </ul>
                 <div class="nav-item social-icons">
@@ -178,7 +178,7 @@
                             <input type="text" name="Nombre" class="form-control-input" placeholder="Nombre" required>
                         </div>
                         <div class="form-group">
-                            <input type="number" name="Teléfono" class="form-control-input" placeholder="Teléfono" required>
+                            <input type="tel" name="Teléfono" class="form-control-input" placeholder="Teléfono" required>
                         </div>
                         <div class="form-group">
                             <input type="email" name="Email" class="form-control-input" placeholder="Correo" required>
@@ -246,8 +246,8 @@
                     <div class="footer-col second">
                         <h6>Enlaces</h6>
                         <ul class="list-unstyled li-space-lg p-small">
-                            <li><a href="#">Términos y condiciones</a></li>
-                            <li><a href="#">Política de privacidad</a></li>
+                            <li><a href="terminos">Términos y condiciones</a></li>
+                            <li><a href="privacidad">Política de privacidad</a></li>
                         </ul>
                     </div> <!-- end of footer-col -->
                     <div class="footer-col third text-center">
