--- a/terminos.html
+++ b/terminos.html
@@ -63,13 +63,13 @@
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ms-auto navbar-nav-scroll">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html#header">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="index#header">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#services">Servicios</a>
+                        <a class="nav-link" href="index#services">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="propiedades.html">Propiedades</a>
+                        <a class="nav-link" href="propiedades">Propiedades</a>
                     </li>
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Nosotros</a>
@@ -84,10 +84,10 @@
                         </ul>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">¿Quiénes somos?</a>
+                        <a class="nav-link" href="nosotros">¿Quiénes somos?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link" href="contacto">Contacto</a>
                     </li>
                 </ul>
                 <div class="nav-item social-icons">
@@ -247,8 +247,8 @@
                     <div class="footer-col second">
                         <h6>Enlaces</h6>
                         <ul class="list-unstyled li-space-lg p-small">
-                            <li><a href="#">Términos y condiciones</a></li>
-                            <li><a href="#">Política de privacidad</a></li>
+                            <li><a href="terminos">Términos y condiciones</a></li>
+                            <li><a href="privacidad">Política de privacidad</a></li>
                         </ul>
                     </div> <!-- end of footer-col -->
                     <div class="footer-col third text-center">
